docs-archive/apache-airflow-providers-fab/3.10.0/_sources/_api/airflow/providers/fab/auth_manager/api_fastapi/datamodels/roles/index.rst.txt
airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles
===============================================================

.. py:module:: airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.Action
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.Resource
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.ActionResource
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.Role
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.RoleBody
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.RoleResponse
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.RoleCollectionResponse
   airflow.providers.fab.auth_manager.api_fastapi.datamodels.roles.PermissionCollectionResponse


Module Contents
---------------

.. py:class:: Action(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Outgoing representation of an action (permission name).


   .. py:attribute:: name
      :type:  str


.. py:class:: Resource(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Outgoing representation of a resource.


   .. py:attribute:: name
      :type:  str


.. py:class:: ActionResource(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Pairing of an action with a resource.


   .. py:attribute:: action
      :type:  Action


   .. py:attribute:: resource
      :type:  Resource


.. py:class:: Role(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Lightweight role reference used by /users schemas.


   .. py:attribute:: name
      :type:  str


.. py:class:: RoleBody(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.StrictBaseModel`


   Incoming payload for creating/updating a role.


   .. py:attribute:: name
      :type:  str
      :value: None



   .. py:attribute:: permissions
      :type:  list[ActionResource]
      :value: None



.. py:class:: RoleResponse(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Outgoing representation of a role and its permissions.


   .. py:attribute:: name
      :type:  str


   .. py:attribute:: permissions
      :type:  list[ActionResource]
      :value: None



.. py:class:: RoleCollectionResponse(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Outgoing representation of a paginated collection of roles.


   .. py:attribute:: roles
      :type:  list[RoleResponse]


   .. py:attribute:: total_entries
      :type:  int


.. py:class:: PermissionCollectionResponse(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Outgoing representation of a paginated collection of permissions.


   .. py:attribute:: permissions
      :type:  list[ActionResource]
      :value: None



   .. py:attribute:: total_entries
      :type:  int


